[gd_scene load_steps=6 format=3 uid="uid://simple_zombie_test"]

[ext_resource type="Script" uid="uid://d21btkg151mye" path="res://scripts/enemies/enemy_base.gd" id="1_enemy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_col"]
radius = 0.3
height = 1.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_body"]
radius = 0.3
height = 1.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_zombie"]
albedo_color = Color(0.4, 0.6, 0.3, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_attack"]
radius = 0.8

[node name="SimpleZombie" type="CharacterBody3D" groups=["enemies"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_enemy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_col")

[node name="Model" type="Node3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
mesh = SubResource("CapsuleMesh_body")
surface_material_override/0 = SubResource("StandardMaterial3D_zombie")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.8
path_max_distance = 50.0
avoidance_enabled = true
radius = 0.3

[node name="AttackArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackShape" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("SphereShape3D_attack")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SyncTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_path_update_timer_timeout"]
[connection signal="timeout" from="SyncTimer" to="." method="_on_sync_timer_timeout"]
